--- a/README
+++ b/README
@@ -2,6 +2,10 @@ This script convert prices in international Amazon site.
 This is able to exchange from currency of every site to JPY,EUR,GBP,USD,CAD,AUD,CNY,MXN,BRL,THB,KRW. 
 Currency Data are gotten from Xurrency.com via my own web service.
 
+In default, prices are conveted to JPY.
+If you want to change it, use "userscript command" menu.
+(It will pop up when you click the Grease Monkey icon.)
+
 This was hosted in userscripts.org first. Older versions are in there.
 - http://userscripts.org/scripts/show/41488
 And from now on, this script is to be managed on github.com.
