--- a/README
+++ b/README
@@ -2,6 +2,9 @@ This script convert prices in international Amazon site.
 This is able to exchange from currency of every site to JPY,EUR,GBP,USD,CAD,AUD,CNY,MXN,BRL,THB,KRW. 
 Currency Data are gotten from Xurrency.com via my own web service.
 
+Screenshot: 
+ http://wiki.github.com/koki-h/amazon_currencyConvertion/screenshot
+
 In default, prices are conveted to JPY.
 If you want to change it, use "userscript command" menu.
 (It will pop up when you right-click the Grease Monkey icon.)
